oauth login plugin

--- a/CTFd/config.ini
+++ b/CTFd/config.ini
@@ -114,6 +114,14 @@ PERMANENT_SESSION_LIFETIME = 604800
 # Setting for the Cross-Origin-Opener-Policy response header. Defaults to same-origin-allow-popups
 CROSS_ORIGIN_OPENER_POLICY =
 
+[oauth2]
+
+OAUTH2_CLIENT_ID = 
+OAUTH2_CLIENT_SECRET = 
+OAUTH2_BASE_URL = 
+OAUTH2_TOKEN_URL =
+OAUTH2_AUTHORIZATION_URL = 
+
 [email]
 # MAILFROM_ADDR
 # The email address that emails are sent from if not overridden in the configuration panel.
