corrected docker plugin and local adaptations

--- a/CTFd/config.ini
+++ b/CTFd/config.ini
@@ -122,6 +122,11 @@ OAUTH2_BASE_URL =
 OAUTH2_TOKEN_URL =
 OAUTH2_AUTHORIZATION_URL = 
 
+[docker]
+
+DOCKER_MIN_PORT = 
+DOCKER_MAX_PORT = 
+
 [email]
 # MAILFROM_ADDR
 # The email address that emails are sent from if not overridden in the configuration panel.
