webhook with env

--- a/CTFd/config.ini
+++ b/CTFd/config.ini
@@ -127,6 +127,12 @@ OAUTH2_AUTHORIZATION_URL =
 DOCKER_MIN_PORT = 
 DOCKER_MAX_PORT = 
 
+[discord]
+
+DISCORD_URL = 
+DISCORD_SECRET = 
+DISCORD_HOST = 
+
 [email]
 # MAILFROM_ADDR
 # The email address that emails are sent from if not overridden in the configuration panel.
